# Catalog_Classification

./: Catalogue_ecommerce.ipynb  README.md  pyproject.toml  requirements.txt
